Improve description on how to create a new entry

--- a/adm/style/acp_discord_notifications.html
+++ b/adm/style/acp_discord_notifications.html
@@ -55,13 +55,13 @@
 		<legend>{{ lang('DN_WEBHOOK_NEW') }}</legend>
 		<p>{{ lang('DN_WEBHOOK_NEW_DESCRIPTION') }}</p>
 		<dl>
-			<dt><label for="dn_webhook_new_alias">{{ lang('DN_WEBHOOK_NEW_ALIAS') }}{{ lang('COLON') }}</label></dt>
+			<dt><label for="dn_webhook_new_alias">{{ lang('DN_WEBHOOK_NEW_ALIAS') }}{{ lang('COLON') }}</label><br /><span>{{ lang('DN_WEBHOOK_NEW_ALIAS_DESCRIPTION') }}</span></dt>
 			<dd>
 				<input id="dn_webhook_new_alias" name="dn_webhook_new_alias" type="text" value="" size="100" maxlength="255" />
 			</dd>
 		</dl>
 		<dl>
-			<dt><label for="dn_webhook_new_url">{{ lang('DN_WEBHOOK_NEW_URL') }}{{ lang('COLON') }}</label></dt>
+			<dt><label for="dn_webhook_new_url">{{ lang('DN_WEBHOOK_NEW_URL') }}{{ lang('COLON') }}</label><br /><span>{{ lang('DN_WEBHOOK_NEW_URL_DESCRIPTION') }}</span></dt>
 			<dd>
 				<input id="dn_webhook_new_url" name="dn_webhook_new_url" type="text" value="" size="100" maxlength="255" />
 			</dd>
